--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ environment:                            production
 # ------------------------------------------------------------------------------
 #   Sets the build version of J1 Template Gem
 #
-version:                                2021.1.0
+version:                                2021.1.1
 
 # version
 # ------------------------------------------------------------------------------
@@ -224,7 +224,7 @@ doctype:                                html
 #   default:                            false
 #
 title:                                  J1
-slogan:                                 starter
+slogan:                                 starter@github
 description: >
                                         Made for Jekyll · Made for Your Web
 
@@ -241,9 +241,13 @@ author:
 webmaster:
   email:                                webmaster@example.domain
 
+# crawling/indexing DISABLED for default. Settings managed page-wise using
+# frontmatter defaults or by page settings to make sure that only WANTED
+# pages gets crawled.
+#
 robots:
   index:                                false
-  follow:                               true
+  follow:                               false
 
 # ------------------------------------------------------------------------------
 # BRAND configuration
@@ -251,7 +255,7 @@ robots:
 
 brand:
   image:                                modules/icons/j1/j1-512x512.png
-  image_height:                         48                                      # was: 64
+  image_height:                         48
   text:                                 Starter Web
   text_color:                           "#9E9E9E"
 
@@ -314,7 +318,7 @@ permalink:                              pretty
 # if you are running jekyll serve in a development environment,
 # site.url will be set to the value of host, port.
 #
-url:                                    ""
+url:                                    "http://localhost:40000"
 
 # The subpath of your site, e.g. /blog/. Used in conjunction with
 # site.url (see above) when you want a link to something with the
@@ -356,7 +360,7 @@ show_dir_listing:                       false
 #   source:                             .
 #   destination:                        _site
 #
-source:   .
+source:                                 .
 destination:                            _site
 plugins_dir:                            _plugins
 layouts_dir:                            _layouts
@@ -439,7 +443,7 @@ plugins:
 # - jekyll-gist
 # - jekyll-redirect-from
 # - jekyll-sass-converter
-  - jekyll-sitemap
+# - jekyll-sitemap
   - j1-paginator
 
 # ------------------------------------------------------------------------------
@@ -560,6 +564,24 @@ collections:
 defaults:
 
   # ----------------------------------------------------------------------------
+  # HTML partials (loaded via XHR) excluded from sitemap
+  #
+  - scope:
+      path:                             assets/data
+
+    values:
+      sitemap:                          false
+
+  # ----------------------------------------------------------------------------
+  # Module HTML docs and examples excluded from sitemap
+  #
+  - scope:
+      path:                             assets/themes/j1
+
+    values:
+      sitemap:                          false
+
+  # ----------------------------------------------------------------------------
   # Pages
   #
   - scope:
@@ -569,22 +591,22 @@ defaults:
     values:
       layout:                           page
       author:                           J1 Team
-      toc:                              true
-      fam_menu_id:                      page_ctrl_simple
-      resources:                        toccer
+
+#     robots:
+#       index:                          true
+#       follow:                         true
+
       analytics:                        false
       advertising:                      false
       comments:                         false
-      scrollbar:                        false
-      indexed:                          true
 
-      robots:
-        index:                          true
-        follow:                         true
+      toc:                              true
+      fam_menu_id:                      page_ctrl_simple
+      scrollbar:                        false
 
       icons:
         family:                         MDI
-        color:                          md-indigo
+        color:                          md-blue
         size:                           5x
 
       images:
@@ -592,7 +614,7 @@ defaults:
 
       resource_options:
         - toccer:
-            collapseDepth:              2
+            collapseDepth:              3
 
   # ----------------------------------------------------------------------------
   # Posts
@@ -607,23 +629,26 @@ defaults:
 
     values:
       layout:                           post
-      scrollbar:                        false
       author:                           J1 Team
-      toc:                              true
-      fam_menu_id:                      page_ctrl_simple
-      resources:                        toccer
+
+#     robots:
+#       index:                          true
+#       follow:                         true
+
       analytics:                        false
       advertising:                      false
       comments:                         true
 
-      robots:
-        index:                          true
-        follow:                         true
+      series:                           false
+
+      toc:                              true
+      fam_menu_id:                      page_ctrl_simple
+      scrollbar:                        false
 
       icons:
 #       category-icon:                  comment-text-outline
         family:                         MDI
-        color:                          md-indigo
+        color:                          md-blue
         size:                           5x
 
       images:
@@ -632,7 +657,7 @@ defaults:
 
       resource_options:
         - toccer:
-            collapseDepth:              2
+            collapseDepth:              3
 
   # ----------------------------------------------------------------------------
   # PUBLIC - SERIES
@@ -643,18 +668,21 @@ defaults:
 
     values:
       layout:                           post
-      scrollbar:                        false
       author:                           J1 Team
-      toc:                              true
-      fam_menu_id:                      page_ctrl_simple
-      resources:                        toccer
+
+#     robots:
+#       index:                          true
+#       follow:                         true
+
       analytics:                        false
       advertising:                      false
       comments:                         true
 
-      robots:
-        index:                          true
-        follow:                         true
+      series:                           true
+
+      toc:                              true
+      fam_menu_id:                      page_ctrl_simple
+      scrollbar:                        false
 
       icons:
 #       category-icon:                  dots-horizontal-circle
@@ -675,19 +703,17 @@ defaults:
 
     values:
       layout:                           post
-      scrollbar:                        false
       author:                           Wikipedia
-      resources:                        toccer
-      toc:                              true
-      fam_menu_id:                      page_ctrl_simple
-      resources:                        toccer
+
       analytics:                        false
       advertising:                      false
       comments:                         false
 
-      robots:
-        index:                          false
-        follow:                         false
+      series:                           false
+
+      toc:                              true
+      fam_menu_id:                      page_ctrl_simple
+      scrollbar:                        false
 
       icons:
 #       category-icon:                  wikipedia
@@ -712,37 +738,7 @@ defaults:
 
     values:
       layout:                           page
-
-  # ----------------------------------------------------------------------------
-  # Biography (Book Shelf)
-  #
-  - scope:
-      type:                             biography
-      path:                             collections/_biography
-
-    values:
-      layout:                           page
-
-  # ----------------------------------------------------------------------------
-  # Fantasy (Book Shelf)
-  #
-  - scope:
-      type:                             fantasy
-      path:                             collections/_fantasy
-
-    values:
-      layout:                           page
-
-  # ----------------------------------------------------------------------------
-  # Romance (Book Shelf)
-  #
-  - scope:
-      type:                             romance
-      path:                             collections/_romance
-
-    values:
-      layout:                           page
-
+      sitemap:                          false
 
 # ==============================================================================
 # 6. LAYOUT configuration
