--- a/_config.yml
+++ b/_config.yml
@@ -224,7 +224,7 @@ doctype:                                html
 #   default:                            false
 #
 title:                                  J1
-slogan:                                 starter@github
+slogan:                                 starter@netlify
 description: >
                                         Made for Jekyll · Made for Your Web
 
@@ -318,7 +318,7 @@ permalink:                              pretty
 # if you are running jekyll serve in a development environment,
 # site.url will be set to the value of host, port.
 #
-url:                                    "http://localhost:40000"
+url:                                    "https://j1-template-starter.netlify.app"
 
 # The subpath of your site, e.g. /blog/. Used in conjunction with
 # site.url (see above) when you want a link to something with the
@@ -344,7 +344,7 @@ base_path:                              ""
 #
 protocol:                               http
 host:                                   localhost
-port:                                   40000
+port:                                   25000
 timezone:                               Europe/Berlin
 encoding:                               UTF-8
 
@@ -443,7 +443,7 @@ plugins:
 # - jekyll-gist
 # - jekyll-redirect-from
 # - jekyll-sass-converter
-# - jekyll-sitemap
+  - jekyll-sitemap
   - j1-paginator
 
 # ------------------------------------------------------------------------------
