--- a/_data/j1_config.yml
+++ b/_data/j1_config.yml
@@ -408,7 +408,7 @@ analytics:
   provider:                             google
 
   google:
-    tracking_id:                        '<your-tracking_id>'
+    tracking_id:                        '<your-tracking-id>'
 
   custom:
     custom_data:
@@ -423,7 +423,7 @@ advertising:
   enabled:                              false
   provider:                             google
   google:
-    publisher_id:                       '<your-publisher_id>'
+    publisher_id:                       '<your-publisher-id>'
   custom:
     custom_data:
 
