--- a/_data/modules/navigator.yml
+++ b/_data/modules/navigator.yml
@@ -208,14 +208,14 @@ settings:
   nav_quicklinks:
     enabled:                            true
 
-    home_url:                           https://j1-template-starter.netlify.app/
-    back_url:                           none
+    home_url:                           /                                       # none | URL
+    back_url:                           none                                    # none | URL
 
     r_text_sizer:                       false                                   # true | false
 
     github_url:                         none                                    # https://github.com/jekyll-one
     disqus_url:                         none                                    # https://disqus.com/
-    patreon_url:                        none
+    patreon_url:                        none                                    # https://www.patreon.com/jekyll_one/posts
 
   # ----------------------------------------------------------------------------
   # NavTopsearch
